<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dialog_ok_color"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/update_app_marginTop100"
        android:background="@drawable/icon_update" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/update_app_marginTop20"
        android:text="@string/app_have_update"
        android:textColor="@color/wifilist_status_black"
        android:textSize="@dimen/fourteen_size" />

    <Button
        android:id="@+id/start_update"
        style="@style/btn_major"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/update_app_marginTop20"
        android:text="@string/update_app" />

    <Button
        android:id="@+id/skip_update"
        style="@style/btn_minor"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/update_app_marginTop20"
        android:text="@string/un_update_app" />

</LinearLayout>