<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
     >

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bottom_menu"
            android:background="@drawable/selector_top_corner_btn_gray_bg"
            android:gravity="center_horizontal"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/connect_count_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="已成功连接过"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:textColor="@color/dialog_gray" />
            <TextView
                android:id="@+id/connect_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:textColor="@color/dialog_blue" />
            <TextView
                android:id="@+id/connect_count_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="次"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:textColor="@color/dialog_gray" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.01dip"
            android:background="@color/menu_line_color" />

        <Button
            android:id="@+id/btn_menu_connect"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bottom_menu"
            android:background="@drawable/meun_item_click_selector"
            android:text="@string/connect"
            android:textColor="@color/dialog_blue" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.01dip"
            android:background="@color/menu_line_color" />

        <Button
            android:id="@+id/btn_know_password"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bottom_menu"
            android:background="@drawable/meun_item_click_selector"
            android:text="@string/know_password"
            android:textColor="@color/dialog_blue" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.01dip"
            android:background="@color/menu_line_color" />

        <Button
            android:id="@+id/btn_wifi_single"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bottom_menu"
            android:background="@drawable/meun_item_click_selector"
            android:text="@string/wifi_single"
            android:textColor="@color/dialog_blue" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.01dip"
            android:background="@color/menu_line_color" />

        <Button
            android:id="@+id/btn_cancel_connect"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bottom_menu"
            android:background="@drawable/meun_item_click_selector"
            android:text="@string/cancel_connect"
            android:textColor="@color/dialog_red" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.01dip"
            android:background="@color/menu_line_color" />


        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/bottom_menu"
            android:background="@drawable/selector_bottom_corner_btn_bg"
            android:text="@string/cancel"
            android:textColor="@color/dialog_gray" />
    </LinearLayout>

</RelativeLayout>