<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.hiwifi.hiwifi"
    android:id="@+id/about_sildingFinishLayou"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.hiwifi.app.views.UINavigationView
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_height"
        android:background="@color/nav_background_color"
        app:left_drawable="@drawable/icon_back"
        app:tv_title="@string/about_hiwifi_title" >
    </com.hiwifi.app.views.UINavigationView>

    <LinearLayout
        android:id="@+id/ll_about_container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/nav"
        android:background="@color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height0"
            android:layout_weight="1"
            android:gravity="center_horizontal" >

            <ImageView
                android:layout_width="@dimen/about_icon_size"
                android:layout_height="@dimen/about_icon_size"
                android:layout_alignParentBottom="true"
                android:background="@drawable/ic_about_logo" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height0"
            android:layout_weight="2"
            android:gravity="center_horizontal" >

            <RelativeLayout
                android:id="@+id/splashView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/about_margin10"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/app_name"
                    android:textSize="@dimen/about_appname_text_size" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:paddingLeft="@dimen/setting_content_padding_left"
                android:paddingRight="@dimen/setting_content_padding_right" >

                <Button
                    android:id="@+id/bt_version"
                    style="@style/btn_major"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/btn_size_height_big"
                    android:padding="@dimen/about_padding1"
                    android:text="@string/about_version"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/bt_offi_website"
                    style="@style/btn_major"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/btn_size_height_big"
                    android:layout_marginTop="@dimen/about_marginTop20"
                    android:padding="@dimen/about_padding1"
                    android:text="@string/about_offi_website"
                    android:textColor="@color/white" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>