<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.hiwifi.hiwifi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f6f6"
    tools:context=".JSTestActivity" >


    <com.hiwifi.activity.protalpage.MockRedirectWebView
        android:id="@+id/webview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/js_get_db"
        android:layout_below="@id/top" />

    <View
        android:id="@+id/btn_center"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_above="@+id/js_close"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/js_run"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/js_close"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/btn_center"
        android:onClick="get_JS"
        android:text="@string/get_js"
        android:visibility="gone" />

    <Button
        android:id="@+id/js_get_db"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/js_close"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/btn_center"
        android:onClick="refreshDB"
        android:text="@string/refresh_database"
        android:visibility="gone" />

    <Button
        android:id="@+id/js_close"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bottom_have_router_selector_small"
        android:text="@string/protal_close"
        android:textColor="#FFFFFF"
        android:textSize="20dp" />

    <com.hiwifi.app.views.TextViewAdvance
        android:id="@+id/show_js_button"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/webview"
        android:layout_alignParentRight="true"
        app:text_color="#FFFFFF"
        app:text_in_center="true"
        app:text_size="15dp" />

    <View
        android:id="@+id/dialog_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/js_close"
        android:layout_below="@+id/top"
        android:background="#3f000000"
        android:clickable="true" />

    <include
        android:id="@+id/dialog"
        layout="@layout/dialog_loading" />

</RelativeLayout>